--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,7 @@ override.tf.json
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
+
+# Ignore vscode configuration files and directories as the only apply to the persional development setup
+.vscode/
+.devcontainer/
